--- a/templates/index.html
+++ b/templates/index.html
@@ -71,8 +71,10 @@
                         Buffer Size:
                         <select id="buffer-size">
                             <option value="128">128 (Lowest latency)</option>
-                            <option value="256" selected>256 (Balanced)</option>
-                            <option value="512">512 (More stable)</option>
+                            <option value="256" >256 (Balanced)</option>
+                            <option value="512" selected>512 (More stable)</option>
+                            <option value="1024">1024 (Higher quality)</option>
+                            <option value="2048">2048 (Most quality, more latency)</option>
                         </select>
                     </label>
                 </div>
